--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO
 
+* Should show real recipient in "From " line. How to get that? Maybe mailbox name, user setting
 * Better mail parsing library (can accept more non-compliant headers)
 * Can extract and download attachments and parts of multpart messages
 * Multiple mailboxes (breaks current URLs schema)
