Add parser for nonstandard addresses

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 TODO
 
+* Issue a 404 when the index doesn't exist
+* Always redirect to canonical URLs
 * Better mail parsing library (can accept more non-compliant headers)
 * Should show real recipient in "From " line. How to get that? Maybe mailbox name, user setting
 * Can extract and download attachments and parts of multpart messages
